--- a/test-output/luainspect.css
+++ b/test-output/luainspect.css
@@ -1,10 +1,11 @@
 // LuaInspect CSS styles
 
 .id { cursor: pointer }
-.id.local { color: #0000c0; }
+.id.local { color: #0000a0; }
 .id.global { color: #800000 }
 .id.global.possiblyundefined { color: white; background-color: red }
 .id.local.param { color: #000080 }
+.id.local.upvalue { color: #0000ff }
 .id.mutatebind { font-style: italic }
 .id.unused { color: #ffffff; background-color: #000080 }
 
