core/SciTE/HTML: identifies local variables that mask other locals (same name):       e.g. local x=1; local x=2 (strikethrough)

--- a/htmllib/luainspect.css
+++ b/htmllib/luainspect.css
@@ -14,6 +14,7 @@
 .string { color: #00c000 }
 .keyword { color: #505050; font-weight: bold }
 .keyword.highlight { text-decoration: underline }
+.masking { text-decoration: line-through }
 
 .id.highlight {background-color: #ffe0e0}
 
