--- a/test-output/luainspect.css
+++ b/test-output/luainspect.css
@@ -14,6 +14,7 @@
 .string { color: #00c000 }
 .keyword { color: #505050; font-weight: bold }
 .keyword.highlight { text-decoration: underline }
+.masking { text-decoration: line-through }
 
 .id.highlight {background-color: #ffe0e0}
 
