core/SciTE/HTML: improvements to displaying masking/masked lexicals. Masking lexicals display with squiggly line.  Masked lexicals display with strikethrough when masking lexical definition selected.  Also display M next to masking/masked definitions. Based on comments by Tymur Gubayev.

--- a/htmllib/luainspect.css
+++ b/htmllib/luainspect.css
@@ -14,7 +14,8 @@
 .string { color: #00c000 }
 .keyword { color: #505050; font-weight: bold }
 .keyword.highlight { text-decoration: underline }
-.masking { text-decoration: line-through }
+.masking { text-decoration: underline }
+.masked { /*text-decoration: line-through*/ }
 
 .id.highlight {background-color: #ffe0e0}
 
